# illegal-invocation-repro

./: README.md
client/: Cargo.toml
client/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
